# nerdtree

./: docker-compose.yml
discord_bot/: Cargo.toml
discord_bot/src/: main.rs
frontend/: .gitignore  README.md  nuxt.config.js  package.json  tailwind.config.cjs  tailwind.config.js
frontend-svelte/: package.json
frontend-svelte/src/: env.ts
frontend/components/: auth_status.tsx  blog_card.tsx  footer.tsx  repo_card.tsx  (+3 more)
nerdtree-frontend/: README.md  nuxt.config.js  package.json  tailwind.config.js
server/: .env  .gitignore  Cargo.toml  Dockerfile
server/migrations/2021-07-30-063146_initial_db/: up.sql
server/migrations/2021-07-30-063146_intial_db/: down.sql  up.sql
server/src/: email.rs  env.rs  errors.rs  main.rs  paginated_vec.rs
server/src/db/: mod.rs  schema.rs
server/src/db/comment/: models.rs  mutation.rs  query.rs
server/src/db/post/: mod.rs  models.rs  mutation.rs  query.rs
server/src/db/user/: models.rs  mutation.rs  query.rs
server/src/db/voting/: mod.rs  models.rs  mutation.rs  query.rs
server/src/guards/: admin_only.rs  login_required.rs  mod.rs
server/src/jwt/: claims.rs  mod.rs  sign.rs  verify.rs
server/src/services/: mod.rs
server/src/services/auth/: login.rs  mod.rs  password_reset.rs  payloads.rs  refresh_accesstoken.rs  register.rs
server/src/services/blog/: data_query.rs  data_update.rs  mod.rs  payload.rs  voting.rs
server/src/services/comment/: data_query.rs  data_update.rs  mod.rs  payload.rs
server/src/services/discord/: mod.rs
server/src/services/user/: data_query.rs  data_update.rs  mod.rs  payload.rs
(+143 files in other folders)
