[package]
name = "nerdtree-backend-server"
version = "0.1.0"
edition = "2018"
authors = ["The NerdTree Root Node Developers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
incremental = true

[dependencies]
actix-web = "3"
derive_more = "0.99.0"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
actix-web-validator = "2.1.1"
validator = { version = "0.12", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
r2d2 = "0.8.9"
actix-ratelimit = "0.3.1"
rust-argon2 = "0.8"
rand = "0.8.4"
uuid = { version = "0.8.2", features = ["serde", "v1", "v4"] }
jsonwebtoken = "7"
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.10.0-rc.3"
futures-util = "0.3"
image = "0.23.14"
actix-multipart = "0.3.0"
actix-files = "0.5.0"
awmpde = "0.4.0"
env_logger = "0.9.0"
actix-cors = "0.5.4"
